Improve python lib handling

--- a/meson.build
+++ b/meson.build
@@ -66,5 +66,7 @@ endif
 run_target('complete', command: join_paths(rootpath, 'scripts/complete'))
 
 subdir('include')
-subdir('tests')
 subdir('extras')
+if get_option('buildtype') != 'release'
+  subdir('tests')
+endif
