--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 .gitattributes export-ignore
 .gitignore export-ignore
-azure-pipelines.yml export-ignore
-docs export-ignore
-Doxyfile export-ignore
+/azure-pipelines.yml export-ignore
+/docs/ export-ignore
+/Doxyfile export-ignore
 *.i export-ignore
-examples export-ignore
+/examples/ export-ignore
