--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ jobs:
         python3 python3-setuptools openjdk-14-jdk libboost-dev samtools xz-utils bzip2 lrzip
       sudo ln -sf clang-format-10 /usr/bin/clang-format
       sudo ln -sf clang-tidy-10 /usr/bin/clang-tidy
+      sudo pip3 install ninja meson cmake
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja build-sdsl
@@ -68,6 +69,7 @@ jobs:
       brew install --cask adoptopenjdk11
       sudo ln -sf $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
       sudo ln -sf $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
+      sudo pip3 install ninja meson cmake
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja build-sdsl
