Add multiline FASTQ reading capability to SeqReader

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -2,5 +2,5 @@ tests_files = run_command('../scripts/get_tests').stdout().strip().split()
 
 foreach file : tests_files
     t = file.split('.cpp')[0].split('.cxx')[0].split('/')[-1]
-    test(t, executable(t, file, include_directories : btllib_include, dependencies : deps))
+    test(t, executable(t + '_test', file, include_directories : btllib_include, dependencies : deps))
 endforeach
