Add memory sanitize

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -113,7 +113,7 @@ jobs:
   - script: |
       cd build && ninja sanitize-thread
       if [[ $? -ne 0 ]]; then
-        cat meson-logs/testlog.txt
+        cat __build-sanitize-thread/meson-logs/testlog.txt
         exit 1
       fi
     displayName: 'Sanitize thread'
@@ -121,7 +121,7 @@ jobs:
   - script: |
       cd build && ninja sanitize-undefined
       if [[ $? -ne 0 ]]; then
-        cat meson-logs/testlog.txt
+        cat __build-sanitize-undefined/meson-logs/testlog.txt
         exit 1
       fi
     displayName: 'Sanitize undefined'
