--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,8 @@ jobs:
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-13 main"
       sudo apt-get update
-      sudo apt-get install --yes --no-install-recommends clang-format-10 clang-tidy-10 clang cppcheck \
+      sudo apt-get install --yes --no-install-recommends llvm clang-format clang-tidy clang libomp-dev cppcheck \
         python3 python3-setuptools openjdk-16-jdk libboost-dev samtools xz-utils bzip2 lrzip
-      sudo ln -sf clang-format-10 /usr/bin/clang-format
-      sudo ln -sf clang-tidy-10 /usr/bin/clang-tidy
       sudo pip3 install ninja meson cmake
     displayName: 'Install required software'
 
