Add roll_back() and corresponding tests to nthash

--- a/meson.build
+++ b/meson.build
@@ -85,7 +85,8 @@ run_target('test-wrappers', command: join_paths(rootpath, 'scripts/test-wrappers
 
 subdir('include')
 subdir('extras')
-subdir('recipes')
+# Re-enable recipes once finished
+#subdir('recipes')
 if get_option('buildtype') != 'release'
   subdir('tests')
 endif
