Fix cppcheck version for CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       brew update
-      brew install llvm libomp cppcheck boost samtools coreutils xz lrzip
+      brew install llvm libomp cppcheck@2.6.3 boost samtools coreutils xz lrzip
       brew tap adoptopenjdk/openjdk
       brew install --cask adoptopenjdk11
       sudo ln -sf $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
