--- a/meson.build
+++ b/meson.build
@@ -85,8 +85,7 @@ run_target('test-wrappers', command: join_paths(rootpath, 'scripts/test-wrappers
 
 subdir('include')
 subdir('wrappers')
-# Re-enable recipes once finished
-#subdir('recipes')
+subdir('recipes')
 if get_option('buildtype') != 'release'
   subdir('tests')
 endif
