--- a/recipes/meson.build
+++ b/recipes/meson.build
@@ -1,4 +1,4 @@
-recipe_files = run_command('../scripts/get-recipes-files').stdout().strip().split()
+recipe_files = run_command('../scripts/get-files', 'recipes').stdout().strip().split()
 
 foreach recipe_file : recipe_files
   executable(fs.stem(recipe_file),
