Start transition to static library

--- a/recipes/meson.build
+++ b/recipes/meson.build
@@ -4,7 +4,7 @@ foreach recipe_file : recipe_files
   executable(fs.stem(recipe_file),
              recipe_file,
              include_directories : btllib_include,
-             dependencies : deps,
+             dependencies : deps + [ btllib_dep ],
              install : true,
              install_dir : 'bin')
 endforeach
