--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ jobs:
       sudo apt-get update
       sudo apt-get install --yes --no-install-recommends llvm clang-format-13 clang-tidy-13 clang libomp-dev python3 python3-setuptools openjdk-16-jdk libboost-dev samtools xz-utils bzip2 lrzip
 
+      set +o errexit
       command -v clang-format >/dev/null
       if [[ $? -eq 0 ]]; then
         clang_format_dir=$(dirname $(which clang-format))
@@ -29,16 +30,10 @@ jobs:
           exit -1
         fi
       fi
+      set -o errexit
       sudo ln -sf ${clang_format_dir}/clang-format-13 ${clang_format_dir}/clang-format
 
       set +o errexit
-      which clang-format
-      which clang-format-13
-      echo "Checking clang-tidy:"
-      which clang-tidy
-      echo "Checking clang-tidy-13:"
-      which clang-tidy-13
-
       command -v clang-tidy >/dev/null
       if [[ $? -eq 0 ]]; then
         clang_tidy_dir=$(dirname $(which clang-tidy))
