Add min meson version

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,8 @@
 project('btllib', 'cpp',
         version : '1.4.5',
         license : 'GPL3',
-        default_options : [ 'cpp_std=c++11', 'warning_level=3', 'werror=true' ])
+        default_options : [ 'cpp_std=c++11', 'warning_level=3', 'werror=true' ],
+        meson_version : '>= 0.60.0')
 
 # Configuration
 # ===========================================================
