--- a/.github/workflows/openjournals-draft-action.yml
+++ b/.github/workflows/openjournals-draft-action.yml
@@ -7,5 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Open Journals PDF Generator
         uses: openjournals/openjournals-draft-action@v.1.0
