--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,39 +16,9 @@ jobs:
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/focal/ llvm-toolchain-focal-14 main"
       sudo apt-get update
-      sudo apt-get install --yes --no-install-recommends llvm clang-format-14 clang-tidy-14 clang libomp-dev python3 python3-setuptools openjdk-16-jdk libboost-dev samtools xz-utils bzip2 lrzip
-
-      set +o errexit
-      command -v clang-format >/dev/null
-      if [[ $? -eq 0 ]]; then
-        clang_format_dir=$(dirname $(which clang-format))
-      else
-        command -v clang-format-14 >/dev/null
-        if [[ $? -eq 0 ]]; then
-          clang_format_dir=$(dirname $(which clang-format-14))
-        else
-          exit -1
-        fi
-      fi
-      set -o errexit
-      sudo ln -sf ${clang_format_dir}/clang-format-14 ${clang_format_dir}/clang-format
-
-      set +o errexit
-      command -v clang-tidy >/dev/null
-      if [[ $? -eq 0 ]]; then
-        clang_tidy_dir=$(dirname $(which clang-tidy))
-      else
-        command -v clang-tidy-14 >/dev/null
-        if [[ $? -eq 0 ]]; then
-          clang_tidy_dir=$(dirname $(which clang-tidy-14))
-        else
-          exit -1
-        fi
-      fi
-      set -o errexit
-      sudo ln -sf ${clang_tidy_dir}/clang-tidy-14 ${clang_tidy_dir}/clang-tidy
-
-      sudo pip3 install ninja meson cmake
+      sudo apt-get install --yes --no-install-recommends llvm clang-format-14 clang-tidy-14 clang libomp-dev python3 python3-setuptools libboost-dev samtools xz-utils bzip2 lrzip cmake meson ninja
+      alias clang-format=clang-format-14
+      alias clang-tidy=clang-tidy-14
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja
@@ -61,7 +31,7 @@ jobs:
     displayName: 'Run clang-tidy'
 
   - script: |
-      cd build && meson test --repeat=10
+      cd build && meson test --repeat=5
       if [[ $? -ne 0 ]]; then
         cat meson-logs/testlog.txt
         exit 1
@@ -78,11 +48,7 @@ jobs:
 
   - script: |
       set -o errexit -o pipefail
-      sudo pip3 uninstall -y meson # Let compile script install meson
       ./compile
-      # Compile installs dependencies only temporarily for its own use.
-      # We need to reinstall meson to test the wrappers.
-      sudo pip3 install meson
       cd build && ninja test-wrappers
     displayName: 'Test wrappers'
 
@@ -97,12 +63,9 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       brew update
-      brew install llvm clang-format libomp boost samtools coreutils xz lrzip
-      brew tap adoptopenjdk/openjdk
-      brew install --cask adoptopenjdk11
-      #sudo ln -sf $(brew --prefix llvm)/bin/clang-format /usr/local/bin/clang-format
-      sudo ln -sf $(brew --prefix llvm)/bin/clang-tidy /usr/local/bin/clang-tidy
-      sudo pip3 install ninja meson cmake
+      brew install llvm clang-format libomp boost samtools coreutils xz lrzip meson ninja cmake
+      alias clang-format=clang-format-14
+      alias clang-tidy=clang-tidy-14
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja
@@ -115,7 +78,7 @@ jobs:
     displayName: 'Run clang-tidy'
 
   - script: |
-      cd build && meson test --repeat=10
+      cd build && meson test --repeat=5
       if [[ $? -ne 0 ]]; then
         cat meson-logs/testlog.txt
         exit 1
@@ -132,10 +95,6 @@ jobs:
 
   - script: |
       set -o errexit -o pipefail
-      sudo pip3 uninstall -y meson # Let compile script install meson
       ./compile
-      # Compile installs dependencies only temporarily for its own use.
-      # We need to reinstall meson to test the wrappers.
-      sudo pip3 install meson
       cd build && ninja test-wrappers
     displayName: 'Test wrappers'
