--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ jobs:
       wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | sudo apt-key add -
       sudo apt-add-repository "deb http://apt.llvm.org/jammy/ llvm-toolchain-jammy-14 main"
       sudo apt-get update
-      sudo apt-get install --yes --no-install-recommends llvm clang-format-14 clang-tidy-14 clang libomp-dev python3 python3-setuptools libboost-dev samtools xz-utils bzip2 lrzip cmake meson ninja
+      sudo apt-get install --yes --no-install-recommends llvm clang-format-14 clang-tidy-14 clang libomp-dev python3 python3-setuptools libboost-dev samtools xz-utils bzip2 lrzip cmake meson ninja-build
       alias clang-format=clang-format-14
       alias clang-tidy=clang-tidy-14
     displayName: 'Install required software'
