Add llvm executables for macos

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,7 @@ jobs:
       set -o errexit -o pipefail
       brew update
       brew install llvm@14 boost samtools coreutils xz lrzip meson ninja cmake
+      export PATH="$(brew --prefix llvm)/bin:$PATH"
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja
