clang-format/tidy 14

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,8 @@ jobs:
       brew update
       brew install llvm@14 boost samtools coreutils xz lrzip meson ninja cmake
       export PATH="$(brew --prefix llvm)/bin:$PATH"
+      alias clang-format=clang-format-14
+      alias clang-tidy=clang-tidy-14
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja
