--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,8 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       source activate btllib_CI
-      conda install -c conda-forge -c bioconda python llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake
+      conda install -c conda-forge -c bioconda python mamba
+      mamba install -c conda-forge -c bioconda llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake
     displayName: 'Install required software'
 
   - script: |
