--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,7 @@ jobs:
   - script: |
       source activate btllib_CI
       conda install --yes -c conda-forge -c bioconda mamba
-      mamba install --yes -c conda-forge -c bioconda python cxx-compiler llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake clang-tools
+      mamba install --yes -c conda-forge -c bioconda python cxx-compiler libcxx llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake clang-tools
     displayName: 'Install required software'
 
   - script: |
