--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,14 +71,11 @@ jobs:
   - script: |
       source activate btllib_CI
       conda install --yes -c conda-forge -c bioconda mamba
-      mamba install --yes -c conda-forge -c bioconda python clangxx llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake clang-tools
+      mamba install --yes -c conda-forge -c bioconda python compilers llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake clang-tools
     displayName: 'Install required software'
 
   - script: |
       source activate btllib_CI
-      export CC=$(which clang)
-      export CXX=$(which clang++)
-      export AR=$(which ar)
       meson setup build && cd build && ninja
     displayName: 'Build the project'
 
