--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,11 +71,11 @@ jobs:
   - script: |
       source activate btllib_CI
       conda install --yes -c conda-forge -c bioconda mamba
-      mamba install --yes -c conda-forge -c bioconda python compilers libcxx llvm clang-format boost samtools coreutils xz lrzip meson ninja cmake clang-tools
+      mamba install --yes -c conda-forge -c bioconda python clangxx=14 llvm=14 clang-format=14 clang-tools=14 boost samtools coreutils xz lrzip meson ninja cmake
     displayName: 'Install required software'
 
   - script: |
-      conda activate btllib_CI
+      source activate btllib_CI
       meson setup build && cd build && ninja
     displayName: 'Build the project'
 
