--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ jobs:
     submodules: true
   - script: |
       echo "##vso[task.prependpath]$CONDA/bin"
-      conda update -n base -c defaults conda
+      conda update -n base -y -c defaults conda
     displayName: Add conda to PATH
   - script: conda create --yes --quiet --name btllib_CI
     displayName: Create Anaconda environment
