--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,7 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      conda install --yes -c conda-forge -c bioconda llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake
+      conda install --yes -c conda-forge -c bioconda compilers llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake
     displayName: 'Install required software'
 
   - script: |
