--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,11 +72,12 @@ jobs:
 
   - script: |
       source activate btllib_CI
-      conda install --yes -c conda-forge -c bioconda libcxxabi libcxx compilers llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake
+      conda install --yes -c conda-forge -c bioconda libcxx compilers llvm clang-format=14 clang-tools boost samtools coreutils xz lrzip meson ninja cmake
     displayName: 'Install required software'
 
   - script: |
       source activate btllib_CI
+      echo $CMAKE_PREFIX_PATH
       meson setup build && cd build && ninja
     displayName: 'Build the project'
 
