--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,14 +14,7 @@ jobs:
   - script: |
       set -o errexit -o pipefail
       sudo apt-get update
-      sudo apt-get install --yes --no-install-recommends llvm clang-format clang-tidy clang libomp-dev python3 python3-setuptools libboost-dev xz-utils bzip2 lrzip cmake meson ninja-build
-
-      wget https://github.com/samtools/samtools/releases/download/1.16.1/samtools-1.16.1.tar.bz2
-      tar -xjf samtools-1.16.1.tar.bz2
-      cd samtools-1.16.1
-      ./configure
-      make
-      sudo make install
+      sudo apt-get install --yes --no-install-recommends llvm clang-format clang-tidy clang libomp-dev python3 python3-setuptools libboost-dev xz-utils bzip2 lrzip cmake meson ninja-build samtools
     displayName: 'Install required software'
 
   - script: meson setup build && cd build && ninja
@@ -34,11 +27,7 @@ jobs:
     displayName: 'Run clang-tidy'
 
   - script: |
-      cd build && meson test --repeat=5
-      if [[ $? -ne 0 ]]; then
-        cat meson-logs/testlog.txt
-        exit 1
-      fi
+      cd build && meson test --repeat=5 --print-errorlogs
     displayName: 'Run tests'
 
   - script: |
