--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,9 @@ jobs:
       cd build && ninja clang-format-check
     displayName: 'Run clang-format'
 
-  - script: cd build && ninja clang-tidy
+  - script: |
+      source activate btllib_CI
+      cd build && ninja clang-tidy
     displayName: 'Run clang-tidy'
 
   - script: |
